fixed overflowing image in small screen

--- a/src/assets/styles/contact.scss
+++ b/src/assets/styles/contact.scss
@@ -52,9 +52,12 @@
   padding: 0 15px;
   display: flex;
   gap: 40px;
+  .left-content {
+    max-width: 300px;
+  }
   .residence-img {
     border-radius: 10px;
-    max-width: 300px;
+    width: 100%;
   }
 }
 ul.contact-info-list{
@@ -62,13 +65,14 @@ ul.contact-info-list{
   margin: 15px 0;
   li {
     display: flex;
+    align-items: center;
     gap: 8px;
     padding: 5px 0px;
   }
 }
 li.contact img{
-  width: 20px;
-  height: 20px;
+  width: 1.12em;
+  height: 1.12em;
 }
 
 .right-content .message-me {
@@ -112,9 +116,9 @@ li.contact img{
   height: fit-content;
   background-color: #090909;
   cursor: pointer;
+  font-size: 1em;
   transition: all 0.2s ease-in-out;
   &:hover {
-    opacity: 0.75;
     font-size: .95em;
   }
   div {
